--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Run solution
         run: |
           ls -la
-          cp skillyard-io-tests/react-frontend-engineer/stages/fundamentals-of-web-technologies/contentful-customer-registration-portal/run/Dockerfile bahdcoder/${{ inputs.repository_name }}/
+          cp skillyard-io-tests/react-frontend-engineer/stages/fundamentals-of-web-technologies/contentful-customer-registration-portal/run/Dockerfile .
           docker build -t contentful-customer-registration-portal:v1
           docker run -d -p 8081:80 contentful-customer-registration-portal:v1
       - name: Setup and run skillyard tests repository
