--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -30,13 +30,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.12.0
+          cache: 'yarn'
+          cache-dependency-path: yarn.lock
       - name: Download Skillyard test repository
         run: |
           git clone https://github.com/skillyard-io/tests.git skillyard-io-tests
           ls -la
       - name: Run solution
         run: |
-          ls -la
           cp skillyard-io-tests/react-frontend-engineer/stages/fundamentals-of-web-technologies/contentful-customer-registration-portal/run/Dockerfile .
           docker build -t contentful-customer-registration-portal:v1 .
           docker run -d -p 8081:80 contentful-customer-registration-portal:v1
